<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Quiz App</string>
    <string name="quiz_subject">Computer Science Quiz</string>
    <string name="question_i">Question 1: Android is a mobile operating system developed by</string>
    <string name="question_ii">Question 2: One kilobyte is equal to</string>
    <string name="question_iii">Question 3: Which of the following are examples of Operating System? (Note: selecting a wrong option attracts a negative score)</string>
    <string name="question_iv">Question 4: IC in computer chip technology means</string>
    <string name="question_v">Question 5: IC chips used in computers are usually made of </string>

    <string name="question_i_option_a">Google</string>
    <string name="question_i_option_b">Android Studio</string>
    <string name="question_i_option_c">JDK</string>
    <string name="question_i_option_d">XML</string>

    <string name="question_ii_option_a">1000 bytes</string>
    <string name="question_ii_option_b">1024 bytes</string>
    <string name="question_ii_option_c">100 bytes</string>
    <string name="question_ii_option_d">1023 bytes</string>

    <string name="question_iii_option_a">Red Hat Linux</string>
    <string name="question_iii_option_b">Microsoft Office 365</string>
    <string name="question_iii_option_c">Windows 98</string>
    <string name="question_iii_option_d">Android Studio</string>

    <string name="i_circuit">Integrated circuit</string>
    <string name="silicon">Silicon</string>
    <string name="semiconductor">Semiconductor</string>

    <string name="submit">Submit</string>
    <string name="reset">Reset</string>

    <string name="corr_answer">Answers:</string>
    <string name="answer_i">1. Google</string>
    <string name="answer_ii">2. 1024 bytes</string>
    <string name="answer_iii">3. Red Hat Linux, Windows 98</string>
    <string name="answer_iv">4. Integrated Circuit</string>
    <string name="answer_v">5. Silicon (or Semiconductor)</string>

    <!-- Student's name will be shown in the format of "Student Name: Amy" where Amy is the
    student's name. [CHAR LIMIT=NONE] -->
    <string name="student_name">Student Name: <xliff:g id="name" example="Amy">%S</xliff:g></string>

    <string name="quiz_score">Quiz Score: <xliff:g id="score" example="10%">%s</xliff:g></string>

</resources>
