<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/quiz_header_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:src="@drawable/computerquiz"
            android:scaleType="fitCenter"/>

        <LinearLayout
            android:id="@+id/quiz_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quiz_header_image_view"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/quiz_subject" />

            <EditText
                android:id="@+id/user_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Student's Name"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/quiz_header"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/question_i_text_view"
                style="@style/QuestionTextStyle"
                android:text="@string/question_i" />

            <RadioGroup
                android:id="@+id/question_i_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_i_option_a_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/question_i_option_a"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_i_option_b_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/question_i_option_b"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_i_option_c_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/question_i_option_c"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_i_option_d_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/question_i_option_d"
                    android:textSize="16sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_ii_text_view"
                style="@style/QuestionTextStyle"
                android:layout_marginTop="24dp"
                android:text="@string/question_ii" />

            <RadioGroup
                android:id="@+id/question_ii_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_ii_option_a_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/question_ii_option_a"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_ii_option_b_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/question_ii_option_b"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_ii_option_c_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/question_ii_option_c"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/question_ii_option_d_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/question_ii_option_d"
                    android:textSize="16sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_iii_text_view"
                style="@style/QuestionTextStyle"
                android:layout_marginTop="24dp"
                android:text="@string/question_iii" />

            <CheckBox
                android:id="@+id/question_iii_option_a_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/question_iii_option_a"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_iii_option_b_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/question_iii_option_b"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_iii_option_c_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/question_iii_option_c"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_iii_option_d_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/question_iii_option_d"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/question_iv_text_view"
                style="@style/QuestionTextStyle"
                android:layout_marginTop="24dp"
                android:text="@string/question_iv" />

            <EditText
                android:id="@+id/question_iv_answer_field"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:background="@layout/custom_edittext"
                android:ems="10"
                android:inputType="textCapWords"
                android:paddingLeft="6dp" />

            <TextView
                android:id="@+id/question_v_text_view"
                style="@style/QuestionTextStyle"
                android:layout_marginTop="24dp"
                android:text="@string/question_v" />

            <EditText
                android:id="@+id/question_v_answer_field"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:background="@layout/custom_edittext"
                android:ems="10"
                android:inputType="textCapWords"
                android:paddingLeft="6dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/question_view"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitQuiz"
                android:text="@string/submit"
                android:textSize="16sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetQuiz"
                android:text="@string/reset"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
